1) Change html to ftl. 2) Add pagination 3) optimize get and post rest settings